Fix alignment of logo on mobile devices

--- a/components/Nav/nav.module.scss
+++ b/components/Nav/nav.module.scss
@@ -2,11 +2,11 @@
 
 .nav {
   margin: 24px 0 30px;
+  text-align: center;
 }
 
 .logo {
-  display: block;
-  margin: 0 auto 24px;
+  margin-bottom: 24px;
   width: 100px;
 }
 
